--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Name</title>
 </head>
 <body>
-    <!-- <nav><div class="nav-left">
+    <nav><div class="nav-left">
         <span class="logo">Portfolio</span> 
     </div>
 <div class="nav-right">
@@ -23,7 +23,7 @@
         <li><a href="#education">Educations</a></li>
         <li><a href="#projects">Projects</a></li>
     </ul>
-</div></nav> -->
+</div></nav>
 <header>
     <h2>I am "your name"</h2>
     <p class="underText">-This is my Portfolio</p>
