--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -84,5 +85,18 @@
             <span class="skill" id=" skill3">Marketing</span>
          </div>
     </div>
+
+    <!-- The footer Section -->
+    <footer>
+        <span>
+        <div class="social">
+            <a href="twitter-url" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            <a href="facebook-url" target="_blank"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+            <a href="instagram-url" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+            <a href="linkedin-url" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+            <a href="github-url" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+        </div>
+        </span>
+    </footer>
 </body>
 </html>
