columns added in education box

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
 <section id="education" class="education">
     <h2>Education</h2>
     <div  class="education-box">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio totam explicabo, recusandae natus corporis officia voluptatum repellendus iusto dolorum quia atque fuga labore vero accusantium accusamus ea quaerat dicta. At! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus tempore reprehenderit quisquam, optio quod repellendus veritatis ea debitis exercitationem sunt corrupti deleniti? Ut dolores deleniti in alias, debitis reprehenderit dolorum, rerum commodi optio totam provident saepe. Necessitatibus quasi ad expedita vero nulla quae animi architecto.
+      <div id="column column1">
+	      <section id="education" class="education"><h3><u>HIGHER SIDE</u></h3><br>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo. </p>
+      </div>    
+    <div class = "vertical"><pre> </pre></div>
+      <div id="column column2">
+	      <section id="education" class="education"><h3><u>COLLEGE SIDE</u></h3><br>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo. </p>
+      </div>
     </div>
 </section>
 <section id="skills" class="skills">
