--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </div></nav>
 <header>
     <h2>I am "your name"</h2>
-    <p class="underText">-This is my Portfolio</p>
+    <!-- <p class="underText">-This is my Portfolio</p> -->
+    <p class="underText"></p>
 </header>
 <section id="about-me" class="about-me">
     <h2>About Me</h2>
@@ -125,5 +126,6 @@
     </div>
 </div>
 </body>
+<script src="./js/projects.js"></script>
 <script src="./js/preloader.js"></script>
 </html>
