made navbar responsive

--- a/index.html
+++ b/index.html
@@ -13,19 +13,26 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <nav><div class="nav-left">
-        <span class="logo">Portfolio</span> 
+<nav class="navbar">
+    <div class="brand-title">
+      <span class="logo">Portfolio</span> 
     </div>
-<div class="nav-right">
-    <ul>
+      <a href="" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+    <div class="navbar-links">
+      <ul>
         <li><a href="#about-me">About me</a></li>
         <li><a href="">Linkedin</a></li>
         <li><a href="">Github</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#education">Educations</a></li>
         <li><a href="#projects">Projects</a></li>
-    </ul>
-</div></nav>
+        </ul>
+    </div>
+</nav>
 <header>
     <h2>I am "your name"</h2>
     <!-- <p class="underText">-This is my Portfolio</p> -->
@@ -129,4 +136,5 @@
 </body>
 <script src="./js/projects.js"></script>
 <script src="./js/preloader.js"></script>
+<script src="./js/navbar.js"></script>
 </html>
