made navbar responsive

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="brand-title">
       <span class="logo">Portfolio</span> 
     </div>
-      <a href="" class="toggle-button">
+    <div class="toggle-button">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
-      </a>
+    </div>
     <div class="navbar-links">
       <ul>
         <li><a href="#about-me">About me</a></li>
