Hacktoberfest Issue-45 format education section

--- a/index.html
+++ b/index.html
@@ -79,18 +79,26 @@
     <h2>Education</h2>
     <div  class="education-box">
       <div id="column column1">
-	      <section id="education" class="education"><h3><u>HIGHER SIDE</u></h3><br>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo. </p>
+          <section id="education" class="education"><h3><u>HIGHER SIDE</u></h3><br>
+            <div class="education-subsections">
+                <p><b>Institute Name:</b> xyz gfh asg</p>
+                <p><b>Duration:</b> 2017-2018</p>
+                <p><b>Location:</b> road 28,b-colony, sagrapur</p>
+            </div>  
       </div>    
     <div class = "vertical"><pre> </pre></div>
       <div id="column column2">
 	      <section id="education" class="education"><h3><u>COLLEGE SIDE</u></h3><br>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo. </p>
-      </div>
+            <div class="education-subsections">
+                <p><b>Institute Name:</b> xyz gfh asg</p>
+                <p><b>Duration:</b> 2017-2018</p>
+                <p><b>Location:</b> road 28,b-colony, sagrapur</p>
+            </div>  
+        </div>
     </div>
 </section>
 <section id="skills" class="skills">
-    <h2>Skills</h2>
+    <h2>Skills</h2>s
     <div class="skills-div">
         <div class=" skills-card card1">
             <span class="skill" id=" skill1">Bootstrap</span>
