Hacktoberfest Issue-45 format education section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
 </section>
 <section id="skills" class="skills">
-    <h2>Skills</h2>s
+    <h2>Skills</h2>
     <div class="skills-div">
         <div class=" skills-card card1">
             <span class="skill" id=" skill1">Bootstrap</span>
