Hacktoberfest Issue-45 format education section headings

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2>Education</h2>
     <div  class="education-box">
       <div id="column column1">
-          <section id="education" class="education"><h3><u>HIGHER SIDE</u></h3><br>
+          <section id="education" class="education"><h3><u>HIGHER SECONDARY</u></h3><br>
             <div class="education-subsections">
                 <p><b>Institute Name:</b> xyz gfh asg</p>
                 <p><b>Duration:</b> 2017-2018</p>
@@ -88,7 +88,7 @@
       </div>    
     <div class = "vertical"><pre> </pre></div>
       <div id="column column2">
-	      <section id="education" class="education"><h3><u>COLLEGE SIDE</u></h3><br>
+	      <section id="education" class="education"><h3><u>COLLEGE</u></h3><br>
             <div class="education-subsections">
                 <p><b>Institute Name:</b> xyz gfh asg</p>
                 <p><b>Duration:</b> 2017-2018</p>
