Added about section image

--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
     <!-- <p class="underText">-This is my Portfolio</p> -->
     <p class="underText"></p>
 </header>
-<section id="about-me" class="about-me">
+<section id="about-me" class="about-me"> 
     <h2>About Me</h2>
+    <div class="about-contents">
     <div  class="about-box">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio totam explicabo, recusandae natus corporis officia voluptatum repellendus iusto dolorum quia atque fuga labore vero accusantium accusamus ea quaerat dicta. At! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus tempore reprehenderit quisquam, optio quod repellendus veritatis ea debitis exercitationem sunt corrupti deleniti? Ut dolores deleniti in alias, debitis reprehenderit dolorum, rerum commodi optio totam provident saepe. Necessitatibus quasi ad expedita vero nulla quae animi architecto.
+
     </div>
+    <div class="about-img">
+        <img src="img/aboutmeimg.jpeg" alt="About me image">
+    </div>
+    </div>
+    
 </section>
 <section id="projects" class="projects">
     <h2>Projects</h2>
