--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Best Basic Portfolio Template 2021</title>
+    <!-- Meta Tags -->
+    <meta name="title" content="Best Basic Portfolio Template 2021">
+    <meta name="description" content="This is the best basic portfolio template. It is a very simple portfolio HTML template. It can act as a personal website template and portfolio website template.">
+    <meta name="keywords" content="basic html portfolio template, simple portfolio html, basic personal website template, basic portfolio website template">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
+    <!-- Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rajmunkhan.github.io/basic-portfolio-template/">
+    <meta property="og:title" content="Best Basic Portfolio Template 2021">
+    <meta property="og:description" content="This is the best basic portfolio template. It is a very simple portfolio HTML template. It can act as a personal website template and portfolio website template.">
+    <meta property="og:image" content="https://rajmunkhan.github.io/basic-portfolio-template/img/bg.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://rajmunkhan.github.io/basic-portfolio-template/">
+    <meta property="twitter:title" content="Best Basic Portfolio Template 2021">
+    <meta property="twitter:description" content="This is the best basic portfolio template. It is a very simple portfolio HTML template. It can act as a personal website template and portfolio website template.">
+    <meta property="twitter:image" content="https://rajmunkhan.github.io/basic-portfolio-template/img/bg.jpg">
 </head>
 <body>
 <nav class="navbar">
@@ -42,8 +63,9 @@
     <h2>About Me</h2>
     <div class="about-contents">
     <div  class="about-box">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio totam explicabo, recusandae natus corporis officia voluptatum repellendus iusto dolorum quia atque fuga labore vero accusantium accusamus ea quaerat dicta. At! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus tempore reprehenderit quisquam, optio quod repellendus veritatis ea debitis exercitationem sunt corrupti deleniti? Ut dolores deleniti in alias, debitis reprehenderit dolorum, rerum commodi optio totam provident saepe. Necessitatibus quasi ad expedita vero nulla quae animi architecto.
-
+        <strong>Lorem ipsum</strong> dolor sit, amet consectetur adipisicing elit. Odio totam explicabo, recusandae natus corporis officia voluptatum repellendus iusto dolorum quia atque fuga labore vero accusantium accusamus ea quaerat dicta. At! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus tempore reprehenderit quisquam, optio quod repellendus veritatis ea debitis exercitationem sunt corrupti deleniti? Ut dolores deleniti in alias, debitis reprehenderit dolorum, rerum commodi optio totam provident saepe. Necessitatibus quasi ad expedita vero nulla quae animi architecto. <br><br>
+        <strong> Ipsum dolor sit</strong>, amet consectetur adipisicing elit. Doloremque quis suscipit temporibus. Nesciunt iste, ad molestiae expedita dolorum quae placeat sed beatae. Voluptates fuga officiis repellat fugit, officia dolore eum!<br><br>
+        <i>Lorem ipsum dolor</i>, sit amet consectetur adipisicing elit. Architecto natus harum in, eos deleniti excepturi doloremque aut cumque alias eum ab iste blanditiis quod dolorem pariatur earum nobis facere accusamus maxime magni commodi saepe veritatis?
     </div>
     <div class="about-img">
         <img src="img/aboutmeimg.jpeg" alt="About me image">
