made footer for portfolio

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <a href=""><i class="fas fa-envelope"></i></a>
         </li>
     </ul>
-    <div class="credits">© 2021 [YOUR NAME] | Some rights Reserved</div>
+    <div class="credits">© 2021 [YOUR NAME] | Some rights Reserved.</div>
 </footer>
 </body>
 <script src="./js/projects.js"></script>
