nav bar hovering effect added

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     </div>
     <div class="navbar-links">
       <ul>
-        <li><a href="#about-me">About me</a></li>
-        <li><a href="">Linkedin</a></li>
-        <li><a href="">Github</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#education">Educations</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about-me"><div class="h2">About me</div></a></li>
+        <li><a href=""><div class="h2">Linkedin</div></a></li>
+        <li><a href=""><div class="h2">Github</div></a></li>
+        <li><a href="#skills"><div class="h2">Skills</div></a></li>
+        <li><a href="#education"><div class="h2">Educations</div></a></li>
+        <li><a href="#projects"><div class="h2">Projects</div></a></li>
         </ul>
     </div>
 </nav>
