Added hamburger menu animation

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
     </div>
     <div class="navbar-links">
       <ul>
