--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#education">Educations</a></li>
         <li><a href="#projects">Projects</a></li>
+	<li><a href="#contactme">Connect</a></li>
         </ul>
     </div>
 </nav>
@@ -139,6 +140,24 @@
             <span class="skill" id=" skill3">Marketing</span>
          </div>
     </div>
+</section>
+<section id="contactme" class="contactme">
+    <h2>Get In Touch</h2>
+    <div class="content">
+        <div class="form">
+	   <br>Name
+           <br>
+             <input type=" text " placeholder="Your Name ">
+                <br> Email Address
+                <br>
+              <input type="email " placeholder="xyz@gmail.com ">
+		  <br> Your Message
+                  <br>
+                    <input type="text">
+                    <br>
+                    <button id="contactsubmit">Submit</button>
+          </div>
+     </div>
 </section>
 
 <div class="pre-loader">
