--- a/index.html
+++ b/index.html
@@ -193,23 +193,24 @@
          </div>
     </div>
 </section>
-<section id="contactme" class="contactme">
-    <h2>Get In Touch</h2>
-    <div class="content">
-        <div class="form">
-	   <br>Name
-           <br>
-             <input type=" text " placeholder="Your Name ">
+  <section id="contactme" class="contactme">
+            <h2>Get In Touch</h2>
+            <div class="content">
+                <br> Name
+                <br>
+                <input type="text" placeholder="Your Name">
                 <br> Email Address
                 <br>
-              <input type="email " placeholder="xyz@gmail.com ">
-		  <br> Your Message
-                  <br>
-                    <input type="text">
-                    <br>
-                    <button id="contactsubmit">Submit</button>
-          </div>
-     </div>
+                <input type="email" placeholder="xyz@gmail.com">
+                <br>Subject
+                <br>
+                <input type="text">
+                <br> Your Message
+                <br>
+                <input type="text">
+                <br>
+                <button id="contactsubmit">Submit</button>
+	  </div>
 </section>
 
 <div class="pre-loader">
