--- a/index.html
+++ b/index.html
@@ -196,18 +196,14 @@
   <section id="contactme" class="contactme">
             <h2>Get In Touch</h2>
             <div class="content">
-                <br> Name
                 <br>
                 <input type="text" placeholder="Your Name">
-                <br> Email Address
                 <br>
-                <input type="email" placeholder="xyz@gmail.com">
-                <br>Subject
+                <input type="email" placeholder="xyz@gmail.com">            
                 <br>
-                <input type="text">
-                <br> Your Message
+                <input type="text" placeholder="Subject">      
                 <br>
-                <input type="text">
+                <input type="text" placeholder="Your Message">
                 <br>
                 <button id="contactsubmit">Submit</button>
 	  </div>
