--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <li><a href="#skills"><div class="h2">Skills</div></a></li>
         <li><a href="#education"><div class="h2">Educations</div></a></li>
         <li><a href="#projects"><div class="h2">Projects</div></a></li>
-        </ul>
+        <li><a href="#experience-section"><div class="h2">EXPERIENCE</div></a></li>
+      </ul>
     </div>
 </nav>
 <header>
@@ -187,6 +188,41 @@
         <div class=" skills-card card3">
             <span class="skill" id=" skill3">Marketing</span>
          </div>
+    </div>
+</section>
+<!-- experience section -->
+<section id="experience-section" class="experience-section">
+  <h2>Experience</h2>
+  <div class="experience-div">
+      <div class="experience-card" id="card1">
+        <div class="experienceCard-header animated-bg" id="header">
+             <img src="img/GOOGLE.jpg" alt="">
+        </div>   
+        <div class="experienceCard-content">
+            <h3 class="animated-bg animated-bg-text experienceCard-title" id="title">Lorem ipsum dolor sit amet.</h3>
+            <p class="excerpt" id="excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quod?</p>      
+        </div>    
+      </div>
+    
+      <div class="experience-card" id="card2">
+        <div class="experienceCard-header animated-bg" id="header">
+             <img src="img/facebook.jpg.jpg" alt="">
+        </div>  
+        <div class="experienceCard-content">
+            <h3 class="animated-bg animated-bg-text experienceCard-title" id="title">Lorem ipsum dolor sit amet.</h3>
+            <p class="excerpt" id="excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quod?</p>      
+        </div>    
+      </div>
+    
+      <div class="experience-card" id="card3">
+        <div class="experienceCard-header animated-bg" id="header">
+             <img src="img/microsoft.jpg" alt="">
+        </div>
+        <div class="experienceCard-content">
+            <h3 class="animated-bg animated-bg-text experienceCard-title" id="title">Lorem ipsum dolor sit amet.</h3>
+            <p class="excerpt" id="excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, quod?</p>      
+        </div>    
+      </div>
     </div>
 </section>
 
