--- a/index.html
+++ b/index.html
@@ -284,7 +284,28 @@
         </div>
     </div>
 </div>
+<footer>
+    
+  <ul>
+      <li>
+          <a href=""><i class="fab fa-linkedin-in"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fab fa-github"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fas fa-phone"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fas fa-envelope"></i></a>
+      </li>
+  </ul>
+  <div class="credits">© 2021 [YOUR NAME] | Some rights Reserved.</div>
+</footer>
+
+
 </body>
+<script src="https://kit.fontawesome.com/84588adc24.js" crossorigin="anonymous"></script>
 <script src="./js/projects.js"></script>
 <script src="./js/preloader.js"></script>
 <script src="./js/navbar.js"></script>
