--- a/index.html
+++ b/index.html
@@ -255,6 +255,24 @@
                 <button id="contactsubmit">Submit</button>
 	  </div>
 </section>
+<footer>
+
+  <ul>
+      <li>
+          <a href=""><i class="fab fa-linkedin-in"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fab fa-github"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fas fa-phone"></i></a>
+      </li>
+      <li>
+          <a href=""><i class="fas fa-envelope"></i></a>
+      </li>
+  </ul>
+  <div class="credits">© 2021 [YOUR NAME] | Some rights Reserved.</div>
+</footer>
 
 <div class="pre-loader">
     <div class="boxes">
