--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </div>
     </div>
 </section>
-
+<center>
   <section id="contactme" class="contactme">
             <h2>Get In Touch</h2>
             </section>
@@ -358,7 +358,7 @@
 
 </body>
 <script src="https://kit.fontawesome.com/84588adc24.js" crossorigin="anonymous"></script>
-
+<script src="./js/formjs.js"></script>
 <script src="./js/projects.js"></script>
 <script src="./js/preloader.js"></script>
 <script src="./js/navbar.js"></script>
